update to run benchmark as part of cicd

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,3 +26,5 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
+    - name: Benchmark
+      run: dotnet run --project CaesarCypher.Cmdline/CaesarCypher.Cmdline.csproj -c Release
